- Migrated to localStorage for inter session data preservation - Moved some of js resources from between head and body js resource layouts. - Moved some titles to Socialytics

--- a/src/views/layouts/layout-header.ejs
+++ b/src/views/layouts/layout-header.ejs
@@ -3,6 +3,6 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="manifest" href="manifest.json" />
 
-<title>Houman Hadian's Doctoral Project @ualg</title>
+<title>Socialytics</title>
 <%- include ../layouts/layout-stylesheets.ejs %>
 <%- include ../layouts/layouts-javascripts-head.ejs %>
