--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -6,4 +6,5 @@
 <!--<script type="text/javascript" src="/js/echarts.min.js"></script>-->
 <script src="/js/feathers.js"></script>
 <script src="/js/socket.io.js"></script>
+<!--<script src="/js/localforage.min.js"></script>-->
 <script src="/js/client.js"></script>
