--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,8 +35,8 @@ img.logo {
 
 img.UAlglogo {
   display: inline-block;
-  /* position: fixed; */
-  left: 0px;
+  position: fixed;
+  right: 0px;
   /* width: 200px; */
   /* left: 36px; */
   margin: 0 auto;
