- Fixed ugly original scrollbars using OverlayScrollbars library

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-<!--<button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776; Instagram</button>-->
+<!--<button class="instabtn" onclick="openNav('social-sidepanel')">&#9776; Instagram</button>-->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776;</button>
+  <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
   <ul class="navbar-nav">
     <li class="nav-item active">
       <h6 class="nav-link" href="#">Brands statistics</h6>
