--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -58,10 +58,7 @@
 
     </div>
   </div>
-  <h3 class="center-text">SOCIALYTICS</h3>
-  <br/>
-  <h5 class="center-text">This application has been developed during Houman Hadian's doctoral project as a survey research tool for primarily Instagram and  hopefully many other social networks in future</h5>
-  <br/>
+<!--  <h3 class="center-text">SOCIALYTICS</h3>-->
   <div id="content-container">
     <div class="form-container" id="form-container">
       <form class="data-form">
@@ -79,67 +76,67 @@
     <div class="center-text" id="links-container">
       <ul class="endpoints">
         <li>
-          <button class="btn btn-primary" type="button"  value="Get user profile" click-target="http://localhost:8080/instagram/profile?" call-type="profile">Get user profile</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="http://localhost:8080/instagram/profile?" call-type="profile">Get user profile</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get current user profile" click-target="http://localhost:8080/instagram/whoami" call-type="whoami">Get current  user profile</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get current user profile" click-target="http://localhost:8080/instagram/whoami" call-type="whoami">Get current  user profile</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get user recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get user recent posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get user recent posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get user all posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get user all posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get posts by tag</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get posts by tag</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get posts by location</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get posts by location</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get user followings</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get user followings</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get user followers</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get user followers</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search items</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search items</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get feed" click-target="http://localhost:8080/instagram/feed?" call-type="feed-posts">Get feed</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="http://localhost:8080/instagram/feed?" call-type="feed-posts">Get feed</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get all feed" click-target="http://localhost:8080/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="http://localhost:8080/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get post likes</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get post likes</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get post comments</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get post comments</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get post media" click-target="http://localhost:8080/instagram/post?" call-type="post-json">Get post media</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="http://localhost:8080/instagram/post?" call-type="post-json">Get post media</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get suggested posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get suggested posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get suggested people</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get suggested people</button>
           <br/>
         </li>
 
