--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -7,10 +7,10 @@
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776;</button>
+  <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <h6 class="nav-link" href="#">Instagram</h6>
+      <h6 class="nav-link" href="#">Socialytics</h6>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/dashboards/stats">Brands stats</a>
