--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -6,4 +6,5 @@
 
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/dashboard.css">
+<link rel="stylesheet" href="/css/OverlayScrollbars.min.css">
 <!--<link rel="stylesheet" href="/css/font-awesome.min.css">-->
