--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/popper.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>
 
 
 
