--- a/src/views/pages/dashboards-engagement.ejs
+++ b/src/views/pages/dashboards-engagement.ejs
@@ -5,12 +5,12 @@
 </head>
 <body>
 
-<!--<button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776; Instagram</button>-->
+<!--<button class="instabtn" onclick="openNav('social-sidepanel')">&#9776; Instagram</button>-->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <button class="instabtn" onclick="openNav('insta-sidepanel')">&#9776;</button>
+  <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <h6 class="nav-link" href="#">Instagram engagement</h6>
+      <h6 class="nav-link" href="#">Engagement</h6>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/home">Home</a>
