--- a/src/views/pages/sidepanel.ejs
+++ b/src/views/pages/sidepanel.ejs
@@ -1,5 +1,5 @@
-<div class="sidepanel" id="insta-sidepanel">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav('insta-sidepanel')">&times;</a>
+<div class="sidepanel" id="social-sidepanel">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav('social-sidepanel')">&times;</a>
   <a href="javascript:void(0)" value="" style="display:none" id="backbtn" class="backbtn" onclick="backNav()">&#8406</a>
   <div id="instagram-container">
     <div class="loader loader--style1" title="0">
