--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -22,6 +22,9 @@
       <a class="nav-link" href="/dashboards/engagement">Brand engagement</a>
     </li>
   </ul>
+  <ul style="color:white" class="navbar-session-counters" id="navbar-session-counters">
+
+    </ul>
 </nav>
 <div style="margin-top:66px" id="main-contaier" class="main-contaier">
   <%- include ../pages/main.ejs %>
