--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -80,35 +80,35 @@
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get current user profile" click-target="http://localhost:8080/instagram/whoami" call-type="whoami">Get current  user profile</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get current user profile" click-target="http://localhost:8080/instagram/whoami" call-type="whoami">Get current profile</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get user recent posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get recent posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get user all posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get all posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get posts by tag</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get tag posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get posts by location</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get location posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get user followings</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get followings</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get user followers</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get followers</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search items</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search posts</button>
           <br/>
         </li>
         <li>
@@ -120,11 +120,11 @@
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get post likes</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get likes</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get post comments</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get comments</button>
           <br/>
         </li>
         <li>
@@ -132,11 +132,11 @@
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get suggested posts</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
           <br/>
         </li>
         <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get suggested people</button>
+          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get sugg people</button>
           <br/>
         </li>
 
