--- a/public/css/style.css
+++ b/public/css/style.css
@@ -627,6 +627,7 @@ img {
 }
 .etl-btn{
   min-width:200px;
+  text-align: left;
 }
 #social-sidepanel{
   position:fixed;
@@ -642,4 +643,17 @@ img {
 }
 .nav-counter{
   font-size: 1em;
+}
+.etl-badge{
+  background-color:white;
+  color:#007bff;
+  border-radius:50%;
+  margin-left:10px;
+  width:25px;
+  height:25px;
+  vertical-align: middle;
+  float:right;
+}
+#social-sidepanel{
+  position:fixed;
 }
