-Fixed timeout problems temporarily (requests will be moved into a web worker and called via a promise to implement parallelism and stability)

--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -7,4 +7,7 @@
 <script src="/js/feathers.js"></script>
 <script src="/js/socket.io.js"></script>
 <!--<script src="/js/localforage.min.js"></script>-->
+<script src="/js/globals.js"></script>
+<script src="/js/server-notification-client.js"></script>
 <script src="/js/client.js"></script>
+<script src="/js/server-data-client.js"></script>
