--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -72,91 +72,91 @@
     <div class="grid-split">
       <div class="chart-wrapper">
         <div class="chart-title">
-          Cell Title1
+          Top brands trends
         </div>
         <div class="chart-stage">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="chart-notes">
-          Notes about this chart
+          Likes, comments, engagement and sentiment trends
         </div>
       </div>
       <div class="chart-wrapper">
         <div class="chart-title">
-          Cell Title2
+          Top brands trends
         </div>
         <div class="chart-stage">
           <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="chart-notes">
-          Notes about this chart
+          Likes, comments, engagement and sentiment trends
         </div>
       </div>
       <div class="chart-wrapper">
         <div class="chart-title">
-          Cell Title3
+          Top brands pie charts
         </div>
         <div class="chart-stage">
-          <img data-src="holder.js/100px240?theme=white">
+          <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="chart-notes">
-          Notes about this chart
+          language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
         </div>
       </div>
       <div class="chart-wrapper">
         <div class="chart-title">
-          Cell Title4
+          Top brands pie charts
         </div>
         <div class="chart-stage">
-          <img data-src="holder.js/100px240?theme=white">
+          <img data-src="holder.js/100px120?theme=white">
         </div>
         <div class="chart-notes">
-          Notes about this chart
+          language, DoW, DoM, HoD, Locations , tags, verification, image types, image colors, image entities pie charts
         </div>
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title5
+        Top brands maps
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Geographical location maps for top brands posts, fans and engagements
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title6
+        Top brands timelines
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Top brands timeline of posts and engagements
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title7
+        Top brands maps
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Geographical location maps for top brands posts, fans and engagements
       </div>
     </div>
     <div class="chart-wrapper">
       <div class="chart-title">
-        Cell Title8
+        Top brands timelines
       </div>
       <div class="chart-stage">
         <img data-src="holder.js/100px120?theme=white">
       </div>
       <div class="chart-notes">
-        Notes about this chart
+        Top brands timeline of posts and engagements
       </div>
     </div>
   </div>
