--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,9 +1,512 @@
-.dash-container {
+:root {
+  --grid-gap: 15px;
+}
+
+/* GENERAL */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:before,
+:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+}
+
+a {
+  color: #428bca;
+  text-decoration: none;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #eee;
+}
+
+h1,
+h2,
+h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h4,
+h5,
+h6 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 18px;
+}
+
+h5 {
+  font-size: 14px;
+}
+
+h6 {
+  font-size: 12px;
+}
+
+.text-muted {
+  color: #777;
+}
+
+small,
+.small {
+  font-size: 85%;
+}
+
+.lead {
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.4;
+}
+
+@media (min-width: 768px) {
+  .lead {
+    font-size: 21px;
+  }
+}
+
+.container {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  margin-top:66px;
+}
+.main-container{
+  margin:5%;
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+/* NAV */
+
+.nav {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+.nav>li>a {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+}
+
+.nav-tabs>li>a {
+  margin-right: 2px;
+  line-height: 1.42857143;
+  border: 1px solid transparent;
+  border-radius: 4px 4px 0 0;
+}
+
+.nav>li>a:hover,
+.nav>li>a:focus {
+  text-decoration: none;
+}
+
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li.active>a:focus {
+  color: #555;
+  cursor: default;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+}
+
+.nav-list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.nav-list>li {
+  display: block;
+}
+
+.nav-list>li>a {
+  display: block;
+  padding: 10px 15px;
+  line-height: 20px;
+  color: #777777;
+  text-decoration: none;
+}
+
+.nav-list>li>a:hover {
+  color: #ffffff;
+}
+
+.nav-brand {
+  padding: 15px;
+  font-size: 18px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #777777;
+}
+
+.nav-toggle {
+  position: relative;
+  padding: 15px 10px;
+  margin: 8px 15px;
+  background-color: transparent;
+  border: 1px solid #333;
+  border-radius: 3px;
+}
+
+.nav-toggle:hover,
+.nav-toggle:focus {
+  background-color: #333;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.nav-toggle .icon-bar {
+  position: relative;
+}
+
+.nav-toggle .icon-bar,
+.nav-toggle .icon-bar::before,
+.nav-toggle .icon-bar::after {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #fff;
+}
+
+.nav-toggle .icon-bar::before,
+.nav-toggle .icon-bar::after {
+  content: '';
+}
+
+.nav-toggle .icon-bar::before {
+  position: absolute;
+  top: 6px;
+}
+
+.nav-toggle .icon-bar::after {
+  position: absolute;
+  bottom: 6px;
+}
+
+.nav-header {
+  display: flex;
+  flex-wrap: flex;
+  justify-content: space-between;
+}
+
+.navbar {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+}
+
+.navbar-toggle {
+  margin: 8px 15px 8px 0;
+  padding: 9px 10px;
+  height: 34px;
+  background: rgba(255, 255, 255, 0.25);
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.navbar-toggle:focus {
+  outline: none;
+}
+
+.navbar-toggle .icon-bar {
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  background: #ffffff;
+}
+
+.navbar-header {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-header .navbar-toggle {
+  order: 2;
+  margin-left: auto;
+}
+
+.navbar-collapse {
+  margin-top: 0;
+  height: 0;
+  overflow: hidden;
+  will-change: height;
+  border-top: 1px solid transparent;
+  transition: all 0.3s ease;
+}
+
+.navbar-collapse .nav {
+  margin-top: 0;
+}
+
+.navbar-collapse.collapsed {
+  height: 200px;
+  overflow-y: auto;
+}
+
+.navbar-inverse .navbar-collapse {
+  border-color: #101010;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+}
+
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
+  background-color: #333;
+}
+
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
+  color: #fff;
+  background-color: transparent;
+}
+
+.navbar-inverse .navbar-brand:hover svg,
+.navbar-inverse .navbar-brand:focus svg {
+  fill: #fff;
+}
+
+.navbar-inverse .navbar-nav>li>a:hover,
+.navbar-inverse .navbar-nav>li>a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+
+.navbar-brand {
+  min-height: 50px;
+  padding: 15px 15px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+}
+
+.navbar-inverse {
+  background-color: #222;
+  border-color: #080808;
+}
+
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav>li>a {
+  color: #777;
+}
+
+.navbar-inverse .navbar-toggle {
+  background: transparent;
+  border-color: #333;
+}
+
+.navbar-fixed-top {
+  top: 0;
+  border-width: 0 0 1px;
+}
+
+.navbar-fixed-bottom {
+  bottom: 0;
+  margin-bottom: 0;
+  border-width: 1px 0 0
+}
+
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  transform: translate3d(0, 0, 0);
+}
+
+@media (min-width: 768px) {
+  .navbar-header .navbar-toggle {
+    display: none;
+  }
+
+  .navbar {
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar-collapse,
+  .navbar-collapse.collapsed {
+    height: auto;
+  }
+
+  .navbar-collapse {
+    flex: 1;
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .navbar-collapse .align-right {
+    margin-left: auto;
+  }
+
+  .navbar-collapse .nav {
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navbar-collapse .nav .right {
+    margin-left: auto;
+  }
+
+  .navbar-inverse .navbar-collapse {
+    box-shadow: none;
+    border: none;
+  }
+}
+
+/* IMG */
+
+.img-thumbnail {
+  display: inline-block;
+  width: 100% \9;
+  max-width: 100%;
+  height: auto;
+  padding: 4px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* FORM_CONTROL */
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+/* BUTTON */
+
+button {
+  overflow: visible;
+}
+
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.btn:hover,
+.btn:focus {
+  color: #333;
+  text-decoration: none;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #428bca;
+  border-color: #357ebd;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active {
+  color: #fff;
+  background-color: #3071a9;
+  border-color: #285e8e;
+}
+
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active {
+  color: #333;
+  background-color: #e6e6e6;
+  border-color: #adadad;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
 }
 
 /* GRID */
@@ -144,19 +647,60 @@
   .grid-split-columns {
     grid-template-columns: repeat(4, 1fr);
   }
-  .grid-split-quadro-columns {
-    grid-template-columns: repeat(8, 1fr);
-  }
 }
 
-.chart-wrapper {
+/* KEEN */
+
+.socialytics-dashboard {
+  padding-top: 80px;
+  background: #f2f2f2;
+  font-family: 'Gotham Rounded SSm A', 'Gotham Rounded SSm B', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.socialytics-dataviz {
+  background: #fff;
+  border: 1px solid #e7e7e7;
+  border-radius: 2px;
+  box-sizing: border-box;
+}
+
+.socialytics-dataviz-title {
+  border-bottom: 1px solid #e7e7e7;
+  border-radius: 2px 2px 0 0;
+  font-size: 13px;
+  padding: 2px 10px 0;
+  text-transform: uppercase;
+}
+
+.socialytics-dataviz-stage {
+  padding: 10px;
+}
+
+.socialytics-dataviz-notes {
+  background: #fbfbfb;
+  border-radius: 0 0 2px 2px;
+  border-top: 1px solid #e7e7e7;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 11px;
+  padding: 0 10px;
+}
+
+.socialytics-dataviz .socialytics-dataviz-metric {
+  border-radius: 2px;
+}
+
+.socialytics-dataviz .socialytics-spinner-indicator {
+  border-top-color: rgba(0, 187, 222, .4);
+}
+
+.socialytics-dashboard .chart-wrapper {
   background: #fff;
   border: 1px solid #e2e2e2;
   border-radius: 3px;
   margin-bottom: 10px;
 }
 
-.chart-wrapper .chart-title {
+.socialytics-dashboard .chart-wrapper .chart-title {
   border-bottom: 1px solid #d7d7d7;
   color: #666;
   font-size: 14px;
@@ -164,13 +708,13 @@
   padding: 7px 10px 4px;
 }
 
-.chart-wrapper .chart-stage {
+.socialytics-dashboard .chart-wrapper .chart-stage {
   overflow: hidden;
   padding: 5px 10px;
   position: relative;
 }
 
-.chart-wrapper .chart-notes {
+.socialytics-dashboard .chart-wrapper .chart-notes {
   background: #fbfbfb;
   border-top: 1px solid #e2e2e2;
   color: #808080;
@@ -178,9 +722,9 @@
   padding: 8px 10px 5px;
 }
 
-.chart-wrapper .keen-dataviz,
-.chart-wrapper .keen-dataviz-title,
-.chart-stage .chart-title {
+.socialytics-dashboard .chart-wrapper .socialytics-dataviz,
+.socialytics-dashboard .chart-wrapper .socialytics-dataviz-title,
+.socialytics-dashboard .chart-stage .chart-title {
   border: medium none;
 }
 
@@ -194,10 +738,11 @@
   flex: 1;
   min-width: 0;
 }
-
+.navbar-nav{
+  flex-direction: inherit;
+}
 @media (min-width: 768px) {
-  .chart-wrapper {
+  .socialytics-dashboard .chart-wrapper {
     margin-bottom: 0;
   }
 }
-
