--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -1,147 +1,219 @@
 <main class="container">
-  <%include ./logo.ejs%>
-  <img class="github" id="github" alt="Houman Hadian's project toolset on Github" src="/img/svg/github-corner-right.svg">
-  <div id="alert-container" style="position:absolute;top:100px;right:0">
-
-  </div>
-  <div id="carosel" style="width:600px;height:400px;margin-left:23%">
-    <div id="powerpoint" class="carousel slide" data-ride="carousel">
-
-      <!-- Indicators -->
-      <ul class="carousel-indicators">
-        <li data-target="#powerpoint" data-slide-to="0" class="active"></li>
-        <li data-target="#powerpoint" data-slide-to="1"></li>
-        <li data-target="#powerpoint" data-slide-to="2"></li>
-      </ul>
-
-      <!-- The slideshow -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
-        </div>
-        <div class="carousel-item">
-          <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
-        </div>
+  <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
+  <div class="container">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <img class="github" id="github" alt="Houman Hadian's project research tool on Github" src="/img/svg/github-corner-right.svg">
+      <div class="navbar-header">
+        <button class="instabtn" onclick="openNav('social-sidepanel')">&#9776;</button>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="../">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+               viewBox="76.39 132.243 15.35 22" width="20" height="20" fill="#777">
+            <defs>
+              <path id="a"
+                    d="M88.31 136.63c.29-.28.43-.63.43-1.05 0-.41-.14-.76-.43-1.04-.08-.09-.78-.78-.86-.87-.29-.28-.64-.43-1.05-.43-.41 0-.76.15-1.05.43-.75.75-6.78 6.77-7.53 7.53-.29.28-.43.63-.43 1.04 0 .42.14.76.43 1.05.75.75 6.78 6.77 7.53 7.53.29.28.64.42 1.05.42.41 0 .76-.14 1.05-.42.08-.09.78-.78.86-.87.29-.29.43-.63.43-1.04 0-.41-.14-.76-.43-1.05-.37-.38-2.24-2.25-5.61-5.61 3.37-3.37 5.24-5.24 5.61-5.62z" />
+            </defs>
+            <use xlink:href="#a" />
+            <use xlink:href="#a" />
+          </svg>
+        </a>
+        <a class="navbar-brand" href="./">Socialytics &raquo; Home</a>
       </div>
-
-      <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#powerpoint" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#powerpoint" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
-
+      <div class="navbar-collapse">
+        <ul class="navbar-nav nav main-nav">
+          <li><a href="/dashboards/stats">Stats dashboard</a></li>
+          <li><a href="/dashboards/explore">Data explore</a></li>
+          <li><a href="/dashboards/engagement">Engagement dashboard</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-<!--  <h3 class="center-text">SOCIALYTICS</h3>-->
-  <div id="content-container">
-    <div class="form-container" id="form-container">
-      <form class="data-form">
-        <div class="form-group">
-          Profile name: <input type="text" class="form-control" id="username-input" username="username"><br>
-          Tag: <input type="text" class="form-control" id="tag-input" tag="tag"><br>
-          Location: <input type="text" class="form-control" id="location-input" location="location"><br>
-          Search query: <input type="text" class="form-control" id="search-input" search-query="search-query"><br>
-          Short code: <input type="text" class="form-control" id="shortcode-input" short-code="short-code"><br>
-          Count: <input type="number" class="form-control" id="count-input" count=0><br>
+  <div class="container grid grid-hero-sidebar">
+    <div class="sidebar">
+      <div class="widget-wrapper">
+        <div class="widget-stage">
+          <form class="data-form">
+            <div class="form-group">
+              Profile name: <input type="text" class="form-control" id="username-input" username="username"><br>
+              Tag: <input type="text" class="form-control" id="tag-input" tag="tag"><br>
+              Location: <input type="text" class="form-control" id="location-input" location="location"><br>
+              Search query: <input type="text" class="form-control" id="search-input" search-query="search-query"><br>
+              Short code: <input type="text" class="form-control" id="shortcode-input" short-code="short-code"><br>
+              Count: <input type="number" class="form-control" id="count-input" count=0><br>
+            </div>
+            <input value="Get sample data" type="button" class="btn btn-primary" click-target="http://localhost:8080/instagram/form/data?" call-type="form-data">
+          </form>
+
         </div>
-      </form>
-      <input value="Get sample data" type="button" class="btn btn-primary" click-target="http://localhost:8080/instagram/form/data?" call-type="form-data">
+        <!--<div class="widget-notes">
+          Notes about this chart
+        </div>-->
+      </div>
     </div>
-    <div class="center-text" id="links-container">
-      <ul class="endpoints">
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="http://localhost:8080/instagram/profile?" call-type="profile">Get user profile</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get current user profile" click-target="http://localhost:8080/instagram/whoami" call-type="whoami">Get current profile</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get recent posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get all posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get tag posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get location posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get followings</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get followers</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="http://localhost:8080/instagram/feed?" call-type="feed-posts">Get feed</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="http://localhost:8080/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get likes</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get comments</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="http://localhost:8080/instagram/post?" call-type="post-json">Get post media</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
-          <br/>
-        </li>
-        <li>
-          <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get sugg people</button>
-          <br/>
-        </li>
+    <div class="hero">
+      <div class="widget-wrapper">
+      <!--  <div class="widget-title">
+          Widget Title
+        </div>-->
+        <div class="widget-stage">
+          <%include ./logo.ejs%>
+          <div id="carosel" style="width:600px;height:400px;margin-left:23%">
+            <div id="powerpoint" class="carousel slide" data-ride="carousel">
 
-      </ul>
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#powerpoint" data-slide-to="0" class="active"></li>
+                <li data-target="#powerpoint" data-slide-to="1"></li>
+                <li data-target="#powerpoint" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide1.jpg" alt="Slide #1">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide2.jpg" alt="Slide #2">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide3.jpg" alt="Slide #3">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide4.jpg" alt="Slide #4">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide5.jpg" alt="Slide #5">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide6.jpg" alt="Slide #6">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide7.jpg" alt="Slide #7">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide8.jpg" alt="Slide #8">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide9.jpg" alt="Slide #9">
+                </div>
+                <div class="carousel-item">
+                  <img style="max-width:600px;max-height:450px" src="/img/ppt/Slide10.jpg" alt="Slide #10">
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#powerpoint" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#powerpoint" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+
+            </div>
+          </div>
+        </div>
+      <!--  <div class="widget-notes">
+          Notes about this chart
+        </div>-->
+      </div>
+    </div>
+
+
+
+
+
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user profile" click-target="http://localhost:8080/instagram/profile?" call-type="profile">Get user profile</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get recent posts" click-target="http://localhost:8080/instagram/posts?" call-type="recent-posts">Get recent posts</button>
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
+    </div>
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user all posts" click-target="http://localhost:8080/instagram/allposts?" call-type="all-posts">Get all posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get all feed" click-target="http://localhost:8080/instagram/allfeed?" call-type="all-feed-posts">Get all feed</button>
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
+    </div>
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="http://localhost:8080/instagram/tag?" call-type="tag-posts">Get tag posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="http://localhost:8080/instagram/location?" call-type="location-posts">Get location posts</button>
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
+    </div>
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user followings" click-target="http://localhost:8080/instagram/following?" call-type="user-following">Get followings</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get user followers" click-target="http://localhost:8080/instagram/followers?" call-type="user-followers">Get followers</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get feed" click-target="http://localhost:8080/instagram/feed?" call-type="feed-posts">Get feed</button>
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
+    </div>
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get search items" click-target="http://localhost:8080/instagram/search?" call-type="search-posts">Get search posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested posts" click-target="http://localhost:8080/instagram/suggested/posts?" call-type="sugg-posts">Get sugg posts</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get suggested people" click-target="http://localhost:8080/instagram/suggested/people?"  call-type="sugg-people">Get sugg people</button>
+
+
+
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
+    </div>
+    <div class="widget-wrapper">
+     <!-- <div class="widget-title">
+        Widget Title
+      </div>-->
+      <div class="widget-stage">
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="http://localhost:8080/instagram/post?" call-type="post-json">Get post media</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="http://localhost:8080/instagram/likes?" call-type="post-likes">Get likes</button>
+        <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="http://localhost:8080/instagram/comments?" call-type="post-comments">Get comments</button>
+      </div>
+     <!-- <div class="widget-notes">
+        Notes about this chart
+      </div>-->
     </div>
 
   </div>
+
+  <div style="margin-top:50px; text-align:center" class="container">
+    <p class="small text-muted">Built with &#9829; for <a href="houmanhadian.github.io">Houman Hadian's doctoral project @ UAlg</a></p>
+  </div>
+
+
+
+
 </main>
