-Fixes on minor style issues on home layout

--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include ../layouts/layout-header.ejs %>
 </head>
-<body class="socialytics-dashboard">
+<body class="">
 <%- include ../pages/main.ejs %>
 <%- include ../pages/sidepanel.ejs %>
 
