--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="main-container">
   <div id="alert-container" style="position:absolute;top:100px;right:0"></div>
   <div class="container">
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -22,7 +22,7 @@
             <use xlink:href="#a" />
           </svg>
         </a>
-        <a class="navbar-brand" href="./">Socialytics &raquo; Home</a>
+        <a class="navbar-brand" href="./">Socialytics</a>
       </div>
       <div class="navbar-collapse">
         <ul class="navbar-nav nav main-nav">
@@ -224,4 +224,4 @@
 
 
 
-</main>
+</div>
